src/objects/SBQQ__ProcessInput__c.object
<CustomObject>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InputConditionExternalId__c</fullName>
        <formula>SBQQ__ProcessInputCondition__r.ExternalId__c</formula>
        <label>InputConditionExternalId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuoteProcessExternalId__c</fullName>
        <formula>SBQQ__QuoteProcess__r.ExternalId__c</formula>
        <label>QuoteProcessExternalId</label>
        <type>Text</type>
    </fields>
</CustomObject>